# Proyecto2MIA1sem2026

./: CMakeLists.txt  app.js  build-api.sh  config.js  demo.smia  dev.sh  engine.hpp  engine_auth.cpp  engine_disk.cpp  engine_fs.cpp  engine_reports.cpp  engine_state.cpp  engine_storage.cpp  engine_utils.cpp  index.html  main.cpp  mia-api.service  mia.config.json  package-lock.json  package.json  run-api.sh  server.js  styles.css
